# NotPixelBot

./: .gitignore  README.md  example_config.txt  main.py  pyproject.toml  test_colors.py
bot/config/: config.py
bot/core/: headers.py  registrator.py  tapper.py
bot/utils/: __init__.py  accounts.py  colors.py  file_manager.py  game_config.py  launcher.py  logger.py
lib/whl/: TgCrypto-1.2.5-cp312-cp312-win_amd64.whl
maps/: color_map_x3.json
